--- a/src/components/quotationfrom/invoiceform.css
+++ b/src/components/quotationfrom/invoiceform.css
@@ -35,7 +35,7 @@ form{
     /* width: 1000px; */
     padding: 20px;
     border: 1px solid grey;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 .h3-title{
     width: 100%;
