--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{
 h1{
   margin-top: 100px;
   margin-bottom: 50px;
-  text-align: center;
+  /* text-align: center; */
 }
 @media (max-width: 1500px) {
   .for-etable{
