--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ h6 {
     .container-sm,
     .container-xl,
     .container-xxl {
-      /* max-width: 1500px !important; */
+      max-width: 1500px !important;
     }
   }
   
@@ -70,6 +70,12 @@ h6 {
     .container-sm,
     .container-xl,
     .container-xxl {
-      /* max-width: 1400px; */
+      max-width: 1400px;
     }
   }
+
+@media (min-width: 1400px){
+.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  max-width: 1320px;
+}
+}
