--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body{
   border: none!important;
 }
 h1{
-  margin-top: 100px;
+  /* margin-top: 100px; */
   margin-bottom: 50px;
   /* text-align: center; */
 }
@@ -49,4 +49,11 @@ h1{
 .li-sidebar{
   font-size: 1rem!important;
 }
+}
+
+
+@media screen and (min-width: 700px) {
+  .for-visible-img {
+    height: 100%;
+  }
 }
