--- a/src/components/quotationfrom/invoiceform.css
+++ b/src/components/quotationfrom/invoiceform.css
@@ -27,8 +27,7 @@ form{
 }
 .row{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     /* width: 1000px; */
 }
 .address{
