--- a/src/components/models/model.css
+++ b/src/components/models/model.css
@@ -22,6 +22,7 @@
     position: fixed;
     left: 50%;
     padding: 100px;
+    overflow: auto;
     top: 50%;
     transform: translate(-50%,-50%);
 }
