--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -6,9 +6,9 @@
 }
 .login-box{
     background-color: white;
-    box-shadow: 0px 0px 7px #323a3d;
+    box-shadow: 3px 4px 23px lightgray;
     width: 500px;
     display: flex;
     flex-direction: column;
-    padding: 40px 100px;
+    padding: 40px 60px;
 }
