6 step execution project create delete done

--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,14 @@ h1{
 .ant-table-cell span{
   font-size: 14px!important;
 }
+
+.body-width{
+width: 1000px;
+}
+
+.FaEye{
+  cursor: pointer;
+}
+.FaEye{
+  cursor: pointer;
+}
