--- a/src/components/models/model.css
+++ b/src/components/models/model.css
@@ -22,7 +22,7 @@
     position: fixed;
     left: 50%;
     padding: 50px;
-    overflow: auto;
+    /* overflow: auto; */
     top: 50%;
     transform: translate(-50%,-50%);
 }
@@ -85,3 +85,26 @@
     width: 200px!important;
 }
   }
+
+  .p--cross--custom{
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    cursor: pointer;
+    background: red;
+    height: 40px;
+    width: 40px;
+    color: white;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    font-size: 12px;
+    border-radius: 360px;
+}
+.p--cross--custom span svg{
+ 
+    color: white;
+  
+}
