--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,24 @@ background-color: var(--pr-color)!important;
 border: none!important;
 color: white!important;
 }
+
+.model-main-login{
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 100;
+}
+.model-main-box-login{
+position: relative;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+width: 350px;
+padding: 10px;
+height: 600px;
+background-color: white;
+}
