Give an Application login button on top of the website, its should be visible on top.
-    Pls increase security features on websites.

-     PLs change that dark blue colour into spacemate colour branding.

-    Welcome to Spacemate msg shall be in Center of landing page.

-

19th March

-    Pls give the remove option in files attachment menu.

-    Unit size makes it a character field. Should accept words also.

-    On submission, pls give massage of

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body{
 }
 :root{
   /* --pr-color:#53cfcd; */
-  --pr-color:#0253a2;
+  /* --pr-color:#0253a2; */
+  --pr-color:#6bc9d6;
   --pr-text-color:white;
   --clr-hover-DropdownLink:white;
   --clr-dark-secondary:#6bc9d6;
