--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 .main-nav {
   width: 100%;
-  height: 10rem;
+  /* height: 10rem; */
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 25px 50px -20px,
@@ -37,7 +37,10 @@
 
 .social-media {
   grid-column: 4/5;
-  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 2rem; */
 }
 
 
