--- a/all.css
+++ b/all.css
@@ -18,6 +18,7 @@
   --bgcolor: rgb(234, 252, 252);
   /* --primary-color: rgba(222, 205, 43, 1); */
   --primary-color: rgb(83, 207, 205);
+  --primary-color-pay: #29384f;
   --secondary-color: #e8effd;
   --design-color: #6fccdd;
   --design-secondary-color: #cfb1d4;
